@@ -1,3 +1,15 @@
+2004-11-09  Hiroyuki Ito <ZXB01226@nifty.com>
+
+	* [w3m-dev 04128] Re: w3mimgdisplay
+	* acinclude.m4 (AC_W3M_IMAGE): check not yes
+	* aclocal.m4, configure: regen
+	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load): 
+	   fb_image_fill in case GDK_PIXBUF_FRAME_DISPOSE
+	* w3mimg/x11/x11_w3mimg.c (get_animation_size):
+	   return n
+	  (x11_load_image): 
+	   fill in case GDK_PIXBUF_FRAME_DISPOSE
+
 2004-11-05  Hiroyuki Ito <ZXB01226@nifty.com>
 
 	* [w3m-dev 04117] Re: start attribute and value attribute on ordered lists
